static/style.css
html, body, form, h1, h2, h3, h4, h5, h6, input, label, table, td, div {
    margin:0;
    padding:0;

}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

body {
    font-family: 'Droid Sans', Helvetica, sans-serif;
    background-color: #f0f0f0;
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    padding: 4px 20px 4px 0;
    text-align: right;
    background-color: rgba(189, 195, 199, 0.5);
    width: 100%;
    font-size: 12px;
    color: midnightblue;
}

.follow {
    margin-right: 10px;
}

input, textarea, select {
    font-family: inherit;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

.menu{
    float: right;
    text-align: center;
    height: 40px;
}

.wrapper {
    margin: 70px auto;
    width: 80%;
    overflow: hidden;
}

/* Header & envelope --------- */

    
header, body:before, body:after {width: 100%;}

header, body:before {
    position: fixed;
    top: 0;
    left: 0;
    height: 50px;
}

header {
    left: 0;
    background-color: rgba(189, 195, 199, 0.9);
    color: midnightblue;
    box-sizing: border-box;
    padding: 5px;
    z-index: 9999;
}

body:before,
body:after {
    content: "";
    display: block;
}

body:before {
    box-shadow: 0 1px 1px midnightblue;
    z-index: 9997;
}

body:after {
    position: absolute;
    top: 50px;
    height: 3px;
    background: inherit;
    z-index: 9998;
}

header h1 {
    float: left;
}

header table {
    display: inline-block;
    background-color: transparent;
    float: left;
}

header table td {
    text-align: left;
    padding: 2px;
}

/* --END header & envelope -------- */

/* Footer ------------------------  */


/* --END footer ------------------ */

/* Search form */

option {
    padding:8px 5px;
    border: 2px solid #bdc3c7;
}

label {
    display: block;
}


input, .reset {
    border: 0;
    font-weight: bold;
    font-size: 15px;
}

select {
    padding: 8px 12px;
    border: 0;
    font-weight: bold;
    border-radius: 6px;
    font-size: 15px;
    -webkit-appearance: none;
}

.input-wrapper {
    border-radius: 6px;
    background-color: white;
    display: inline-block;
    overflow: hidden;
    padding: 2px;
    float: right;
}

input[type=search] {
    margin: 0;
}

input[type=radio] {
    display: table-cell;
}

input[type=submit] {
    text-indent: -9999px;
    padding: 0;
    width: 32px;
    height: 32px;
    display: inline-block;
    background: transparent url(sprites.svg) no-repeat;
}

input[type=submit].search {
    background-position: 0 0;
}

input[type=submit].select {
    background-position: -48px 0;
}

input[type=submit].search:hover,
input[type=submit].select:hover,
.reset:hover {
    cursor:pointer;
}

.message {
    padding-bottom: 8px;
    color: midnightblue;
    text-align: center;
}

.error {
    color:red;
}

/* Prices chart ---------- */


svg {
    background-color: white;
    font-size: 0.6em;
}

.line {
    stroke: midnightblue;
    fill: none;
    stroke-width: 1.5px;
}

.chart {
    width: 100%;
}

.axis path,
.axis line {
    fill: none;
    stroke: midnightblue;
    shape-rendering: crispEdges;
}
.chart text {
    fill: midnightblue;
}

.last {
    font-size: 1.5em;
}

.focus circle {
    fill: none;
}

.hover-line { 
    stroke: midnightblue;
    stroke-width: 1px;
    shape-rendering: crispEdges;
}

.focus circle {
        fill: none;
        stroke: red;
    }

/* --END prices chart ---- */

/* Both tables ------------ */

table {
    background-color: #f0f0f0;
    font-size:0.8em;
}

caption {
    padding:0;
    background-color: grey;
    color: white;    
    font-size: 1.5em;
    font-weight: bold;
    letter-spacing: 2px;
    border-radius: 8px 8px 0 0;
    position: relative;
    height: 2.6em; /* 45px */
}

caption .top, 
caption .bottom {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    position:absolute;
    width:100%;
}

/* hacks: */;
caption .top {
    top:0;
}

caption .bottom {
    bottom:0;
}

caption .left {
    float: left;
    padding-left: 2%;
}

caption .right {
    float: right;
    padding-left: 2%;
}

caption .small {
    font-size: 0.8em;
}


caption a {
    color: white;
    text-decoration: underline;
}

.manager tfoot th,
.manager thead,
.company tr:nth-child(n+13) {
    text-align: center;
    background-color: grey;
    color: white;
}

thead th {
    padding: 10px;
}

/* Rounded lower left and lower right corners of tfoot: */
.manager tfoot > tr:last-child > th:first-child,
.company tr:last-child > th:nth-child(2) {
    border-radius: 0 0 0 8px;
}

tfoot > tr:last-child > th:last-child,
.company tr:last-child > td:last-child {
    border-radius: 0 0 8px 0;
}

/* Manager table --------------- */

.manager tr:nth-child(2n),
.company tr:nth-child(3n+2) {
    background-color: #c8c8c8;
}

.manager td {
    vertical-align: top;
}

.text-left {
    text-align: left;
}

.text-center {
    text-align: center;
}

.text-right {
    text-align: right;
}

.percent {
    text-align: right;
}

.issuer {
    width: 250px;
    text-transform: uppercase;
}

.issuer,
.ticker {
     border-right: 1px solid grey;
}

div.outer {
    position: relative;
    width: 100%;
    clear: both;
}

div.inner {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    position: absolute;
    width: 100%;
}

button {
    width:100%;
    border-radius: 6px;
    margin-left:0px;
    padding: 5px 30px;
    font-weight: bold;
    background-color:white;
    color: #34495E;
    border: 2px solid #34495E;
}

button:hover{
    color: #34495E;
    border: 2px solid #2ECC71;
    cursor:pointer;
}

/* --END manager table -------------- */


 
/* Company table ---------- */

.cf:before,
.cf:after {
    content: "";
    display: table;
}

.cf:after {
    clear:both;
}

.company table {
    width: 100%;
    table-layout: fixed;
}

.company td, th {
    padding: 0;
    text-align: center;
}

.company tr {
    height: 20px;
}

.company tbody th {
    height: 20px;
    text-align: left;
    text-indent: 2%;
}

.company td:not(:last-child) {
    border-right: thin solid;
}

.company thead th:nth-child(n+3),
.company tr:nth-child(3n+3):not(:last-child) td {
    border-bottom: thin solid;
}

time {
    font-size: 0.5em;
    color: black;
}

/* <--- overlays one cell from each left header col category---- */

/* Manual width for description column */
.company th:nth-child(2) {
    width: 75px;
    font-weight: normal;
}

.company th:first-child {
    visibility: hidden;
    width: 0;
    color: tomato;
    text-transform: uppercase;
}

.company tbody tr:nth-child(3n+1) th:first-child {
    visibility: visible;
    position: relative;
    display: block; /* Firefox requires this for relative positioning(?) */
    text-indent: 5px; /* This would be used with "display: table-cell" */
    top: -9px; /* This would be different if using "display: table-cell" */
}

.company tbody tr:nth-last-child(2) th:first-child {
    top: 0px;
    color: white;
}

/* Top row of each quarterly cluster aligned bottom */
.company tbody tr:nth-child(3n+1) {
    vertical-align: bottom;
}

/* All but first top row of each cluster made taller */
.company tbody tr:nth-child(3n+1) {
    height: 1.75em;
}

/* Third row of each quarterly cluster aligned top and made taller */ 
.company tbody tr:nth-child(3n) {
    vertical-align: top;
    height: 1.75em;
}

.company tbody tr:nth-last-child(2) {
    height: 3em;
}

.company tbody tr:last-child {
    background-color: grey;
}

table + p {
    font-size: 0.8em;
    font-style: italic;
    text-align: right;
}

/* --END company table---------- */


/* Media queries -------------------- */

@media only screen and (max-width: 680px) {
    header h1 {
        display: none;
    }
}

@media only screen and (min-width: 650px) {
    .wrapper {
        width: 585px;
    }
}

@media only screen and (max-width: 560px) {
    .company td:nth-child(7),
    .company th:nth-child(7) {
        display: none;
    }

    .company td:nth-child(6),
    .company th:nth-child(6) {
        border-right: 0;
    }

    .company tr:last-child > td:nth-child(6) {
        border-radius: 0 0 8px 0;
    }

}

@media only screen and (max-width: 500px) {

    .option {
        display: none;
    }

    .manager tfoot > tr:last-child > th.percent {
        border-radius: 0 0 8px 0;
    }
}

@media only screen and (max-width: 480px) {
    .company td:nth-child(6),
    .company th:nth-child(6) {
        display: none;
    }

    .company td:nth-child(5),
    .company th:nth-child(5) {
        border-right: 0;
    }

    .company tr:last-child > td:nth-child(5) {
        border-radius: 0 0 8px 0;
    }

    time {
        display: none;
    }

    input[type=search] {
        width: 150px;
    }

    /*header {
        padding: 0;
    }

    input {
        font-size: 12px;
    }*/

    header table td span {
        /*display: none;*/
    }

}

